<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateca">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="set_dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="wright_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="topic_of_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_in_body_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_link" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/?from=learn_subscriptions-with-prof-recommendations</string>
    <string name="legal_practicum_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="e_mail_developer" translatable="false">lawyer@shultzlaw.ru</string>
    <string name="empty_string" translatable="false">""</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="trackCount">Длительность</string>
    <string name="problem_of_loading">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="problem_of_net">Проблемы со связью</string>
    <string name="to_clear_history">Очистить историю</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="music_style">Жанр</string>
    <string name="artist_country">Страна</string>
    <string name="track_intent" translatable="false">track</string>
    <string name="timing_track" translatable="false">00:00</string>
    <string name="message_empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="text_empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="discription">Описание</string>
    <string name="create">Создать</string>
    <string name="playlistTitle">Название*</string>
    <string name="playlist">плейлист</string>
    <string name="added_into_playlist">Добавлено в плейлист %1$s</string>
    <string name="error_to_add_in_playlist">Ошибка добавления в плейлист</string>
    <string name="error_loading_playlists">Ошибка загрузки плейлистов</string>
    <string name="track_already_add_into_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="do_you_want_delete_track">Хотите удалить трек?</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="share">Поделиться</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="do_you_wanna_delete_playlist">Хотите удалить плейлист %1$s?</string>
    <string name="playlist_updated_success">Плейлист %1$s успешно обновлен</string>
    <string name="complete_editing">Завершить редактирование?</string>
    <string name="all_changes_will_be_lost">Все несохраненные изменения будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="enter_playlist_name">Введите название плейлиста</string>
    <string name="playlist_created" translatable="false">Плейлист %1$s успешно создан</string>
    <string name="play" translatable="false">Воспроизвести</string>
    <string name="pause" translatable="false">Пауза</string>
    <string name="no_internet_connection" translatable="false">Отсутствует подключение к интернету</string>
    <string name="notification_title" translatable="false">Playlist Maker</string>
    <string name="notification_channel_name" translatable="false">Воспроизведение аудио</string>
    <plurals name="numberOfTracks" translatable="false">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>