<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:orientation="horizontal">


        <TextView
            style="@style/TextBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12dp"
            android:text="@string/search" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:background="@drawable/rounded_text_field"
        android:paddingHorizontal="@dimen/size_12dp">

        <EditText
            android:id="@+id/textSearch"
            style="@style/SearchingHintStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/icon_search_et"
            android:drawablePadding="@dimen/size_8dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="@dimen/size_8dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor" />


        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:contentDescription="@null"
            android:src="@drawable/icon_close_button"
            android:visibility="visible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:visibility="gone">


        <ProgressBar
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:indeterminateTint="@color/dark_blue"
            android:progress="45" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/MessageStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/you_searched" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_items_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_history_button"
            style="@style/ButtonRefresh"
            android:layout_width="148dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_marginBottom="@dimen/size_8dp"
            android:background="@drawable/oval_shape"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/to_clear_history"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/place_holder_message_not_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_24dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_internet" />

        <TextView
            style="@style/MessageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="center"
            android:text="@string/problem_of_net" />

        <TextView
            style="@style/MessageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/problem_of_loading" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_button"
            style="@style/ButtonRefresh"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/size_24dp"
            android:background="@drawable/oval_shape"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/place_holder_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_24dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_error" />

        <TextView
            style="@style/MessageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/nothing_found" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_items_view" />

</LinearLayout>
